syntax = "proto3";
package service;

option go_package = "pkg/grpc_pb";

service Profile {
  rpc GetUserInfo(UserRequest) returns (UserResponse);
}

enum UserTypes {
  teacher = 0;
  mentor = 1;
}

message UserRequest {
  int64 userId = 1;
}

message UserResponse {
  int64 id = 1;
  string name = 2;
  int32 age = 3;
  UserTypes userType = 4;
}
